i did do better than the over time

--- a/career.html
+++ b/career.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Career</title>
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
 <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Roboto:ital,wght@0,500;1,400;1,900&display=swap" rel="stylesheet">
@@ -42,14 +42,8 @@
             
           </div>
         </div>
-      </nav>  
+ </nav>
 
-
-      <div class="container">
-
-        <h1 class="text-center"> FIFA22</h1>
-
-      </div>
-      
+ <h1 class="text-center"> CAREER</h1>
 </body>
 </html>
