--- a/voltafootball.html
+++ b/voltafootball.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
+    <title>Voltafootball</title>
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
 <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Roboto:ital,wght@0,500;1,400;1,900&display=swap" rel="stylesheet">
@@ -47,8 +47,8 @@
 
       <div class="container">
 
-        <h1 class="text-center"> FIFA22</h1>
-
+        
+        <h1 class="text-center"> VOLTAFOOTBALL</h1>
       </div>
       
 </body>
