--- a/career.html
+++ b/career.html
@@ -33,7 +33,7 @@
 
               
               <li class="nav-item">
-                <a class="nav-link disabled"><h5>FIFA POINTS</h5></a>
+                <a class="nav-link" href="fifapoints"><h5>FIFA POINTS</h5></a>
               </li>
               <li class="nav-item">
                 <a class="nav-link disabled"><h5>TOP 10 BEST PLAYERS</h5> </a>
