--- a/fifapoints.html
+++ b/fifapoints.html
@@ -17,9 +17,6 @@
             FIFA22
             <img src="sign.png" alt="" width="64">
           </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
@@ -36,7 +33,7 @@
                 <a class="nav-link" href="fifapoints.html"><h5>FIFA POINTS</h5></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link disabled"><h5>TOP 10 BEST PLAYERS</h5> </a>
+                <a class="nav-link" href="top10bestplayers.html"><h5>TOP 10 BEST PLAYERS</h5> </a>
               </li>
             </ul>
             
@@ -47,7 +44,7 @@
 
       <div class="container">
 
-        <h1 class="text-center"> FIFA22</h1>
+        <h1 class="text-center">FIFAPOINTS</h1>
 
       </div>
 </body>
