--- a/top10bestplayers.html
+++ b/top10bestplayers.html
@@ -34,10 +34,10 @@
 
               
               <li class="nav-item">
-                <a class="nav-link disabled"><h5>FIFA POINTS</h5></a>
+                <a class="nav-link " href="fifapoints.html"><h5>FIFA POINTS</h5></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link disabled"><h5>TOP 10 BEST PLAYERS</h5> </a>
+                <a class="nav-link " href="top10bestplayers.html"><h5>TOP 10 BEST PLAYERS</h5> </a>
               </li>
             </ul>
             
