--- a/index.html
+++ b/index.html
@@ -48,14 +48,40 @@
       <div class="container">
  
         <h1 class="text-center"> FIFA22</h1>
-        <img src="newplayer.jpg" alt="" class="w-50">
 
         <div class="row">
-          <div class="col">
-            NEW PLAYERS ARE ARRIVED IN FIFA 22 THEY ARE CALLED VERSUS 
-            YOU COULD GET THEM DOING SBC IN FIFA 22 OR YOU CAN FIND THEM IN 
-            FIFA PACKS.
+          <div class="col-6">
+            <img src="newplayer.jpg" alt="" class="img-fluid">
+            New players are arrived in Fifa 22 thay are called Versus you might find someone 
+            doing SBC mission for the Versus players or if you have luck you can find them in the fifa
+             packs.There are very good players like Gabriel Jesus that I raccomendo buy in the
+              market if you have Fifa credits or you could find him in the packs.
+          </div>
+          <div class="col-6">
+            <img src="totw1-1.jpg.webp" alt=""   class="img-fluid">
+           this team of the week has one of the stongest player of the premierleague that is 
+           Mohammed Salah that you could find him opening fifa packs or if you have fifa credits 
+           you could buy him in the market.
+          </div>
 
-      </div>
+  
+
+
+    </div>
+
+
+
+
+
+   </div>
+</div>
+
+
+
+
+
+
+
+</div>
 </body>
 </html>
