--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
           </div>
           <div class="col-6">
             <img src="totw1-1.jpg.webp" alt=""   class="img-fluid">
-           this team of the week has one of the stongest player of the premierleague that is 
+           This team of the week has one of the stongest player of the premierleague that is 
            Mohammed Salah that you could find him opening fifa packs or if you have fifa credits 
            you could buy him in the market.
           </div>
-
+        </div>
   
 
 
